--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
+    "icons": "^1.0.0",
+    "react": "^18.3.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-toggle-dark-mode": "^1.1.1",
     "sass": "^1.75.0"
   },
@@ -23,6 +25,6 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.0"
+    "vite": "^5.3.1"
   }
 }
